--- a/src/app/components/model/modelPage.html
+++ b/src/app/components/model/modelPage.html
@@ -16,7 +16,7 @@
         <div class="selection-box" float always="true">
           <uib-tabset active="ctrl.activeTab" justified="true">
             <uib-tab ng-repeat="tab in ctrl.tabs">
-              <uib-tab-heading>
+              <uib-tab-heading id="{{tab.type + '_tab_heading_link'}}">
                 <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
               </uib-tab-heading>
 
@@ -25,7 +25,7 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="selectable-actions">
-                      <button ng-if="ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
+                      <button id="{{'add_new_' + tab.type + '_button'}}" ng-if="ctrl.canEdit()" type="button" class="btn btn-action btn-md add-new-button" ng-click="tab.addNew()">
                         <span class="glyphicon glyphicon-plus"></span>
                         <span>{{tab.addLabel | translate}}</span>
                       </button>
@@ -38,7 +38,7 @@
                     <div class="selectable-items">
                       <ul ng-class="{'has-button': ctrl.canEdit()}">
                         <li ng-repeat="item in tab.items() track by item.id.uri"
-                            id="{{item.id.uri}}"
+                            id="{{item.id.uri + '_tabset_link'}}"
                             ng-class="{'selection': ctrl.isSelected(item)}"
                             ng-click="ctrl.select(item)">
                           {{item.label}} <ajax-loading-indicator-small ng-if="ctrl.isLoading(item)"></ajax-loading-indicator-small>
