--- a/src/app/components/model/modelView.html
+++ b/src/app/components/model/modelView.html
@@ -7,11 +7,13 @@
 
         <span class="mr-4">{{ctrl.model | translateLabel: ctrl.model}}</span>
 
-        <button class="btn btn-action"
+        <button id="show_model_details_button"
+                class="btn btn-action"
                 ng-hide="ctrl.visible"
                 ng-click="ctrl.visible = true" translate>Show model details</button>
 
-        <button class="btn btn-action"
+        <button id="hide_model_details_button"
+                class="btn btn-action"
                 ng-show="ctrl.visible"
                 ng-click="ctrl.visible = false" translate>Hide model details</button>
 
@@ -32,7 +34,7 @@
           <app-status [status]="ctrl.model.status"></app-status>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.model" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
-          <button class="btn btn-link pull-right" ng-click="ctrl.visible = false">
+          <button id="close_model_details_button" class="btn btn-link pull-right" ng-click="ctrl.visible = false">
             <i class="fa fa-times"></i>
             <span translate>Close</span>
           </button>
